--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site
-name: 'Shriramtx'
+name: 'Shriram's Curiosity Chronicles'
 description: 'A chronicle of experiences, insights, and discoveries.'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: ''
-disqus: 'demowebsite'
+disqus: ''
 email: ''
 mailchimp-list: ''
 
@@ -18,14 +18,14 @@ plugins:
   - jekyll-paginate
   - jekyll-seo-tag
   
-authors:
+About Me:
     Shriram:
       name:           Shriram
-      site:           https://www.wowthemes.net
+      site:           https://shriramtx.github.io
       avatar:         /assets/images/avatar1.jpg
-      bio:            "Hi, I am Shriram, the author of Mundana, the theme you're currently previewing. I hope you like it!"
-      email:          wowthemesnet@gmail.com
-      twitter:        https://twitter.com/wowthemesnet
+      bio:            "Hi, I am Shriram, I'm an engineer!"
+      email:          shriramtx@gmail.com
+      twitter:        https://twitter.com/ishrirams
 
  
 # Defaults
