--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: 'Shriram's Curiosity Chronicles'
+name: 'Shrirams Curiosity Chronicles'
 description: 'A chronicle of experiences, insights, and discoveries.'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
